Change in html pages

--- a/templates/website/billboard.html
+++ b/templates/website/billboard.html
@@ -2,9 +2,21 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta property="og:title" content="Play Travia Now!" />
+      <!--meta property="og:image" content="https://army.zostel.com/static/img/travia-share.png" /-->
+      <meta property="og:site_name" content="ZO Rooms: #RoomForYou">
+      <meta property="og:url" content="https://more.zorooms.com/" />
+      <meta property="og:type" content="website" />
+      <!--meta property="og:description" content="Want to prove how much you really know about India, learn about new places to travel and challenge your friends at it? Travia is a unique game by Zostel where you answer location based questions by dropping pins on the map.
+Chances to win the new I-pad mini, free Zostel nights and many more surprises in store. Game on! " />
+      <!--meta property="fb:admins" content="" /-->
+      <meta property="fb:app_id" content="491408177702275" />
+      <!--meta name="description" content="Want to prove how much you really know about India, learn about new places to travel and challenge your friends at it? Travia is a unique game by Zostel where you answer location based questions by dropping pins on the map.
+Chances to win the new I-pad mini, free Zostel nights and many more surprises in store. Game on! "-->
+    <title>ZO Rooms | #RoomForYou</title>
 </head>
 <body>
-why so serios?
+why so serious?
 </body>
 </html>
