--- a/templates/website/billboard.html
+++ b/templates/website/billboard.html
@@ -1,22 +1,316 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta property="og:title" content="Play Travia Now!" />
-      <!--meta property="og:image" content="https://army.zostel.com/static/img/travia-share.png" /-->
-      <meta property="og:site_name" content="ZO Rooms: #RoomForYou">
-      <meta property="og:url" content="https://more.zorooms.com/" />
-      <meta property="og:type" content="website" />
-      <!--meta property="og:description" content="Want to prove how much you really know about India, learn about new places to travel and challenge your friends at it? Travia is a unique game by Zostel where you answer location based questions by dropping pins on the map.
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta property="og:title" content="Play Travia Now!" />
+  <!--meta property="og:image" content="https://army.zostel.com/static/img/travia-share.png" /-->
+  <meta property="og:site_name" content="ZO Rooms: #RoomForYou">
+  <meta property="og:url" content="https://more.zorooms.com/" />
+  <meta property="og:type" content="website" />
+  <!--meta property="og:description" content="Want to prove how much you really know about India, learn about new places to travel and challenge your friends at it? Travia is a unique game by Zostel where you answer location based questions by dropping pins on the map.
 Chances to win the new I-pad mini, free Zostel nights and many more surprises in store. Game on! " />
-      <!--meta property="fb:admins" content="" /-->
-      <meta property="fb:app_id" content="491408177702275" />
-      <!--meta name="description" content="Want to prove how much you really know about India, learn about new places to travel and challenge your friends at it? Travia is a unique game by Zostel where you answer location based questions by dropping pins on the map.
+  <!--meta property="fb:admins" content="" /-->
+  <meta property="fb:app_id" content="491408177702275" />
+  <!--meta name="description" content="Want to prove how much you really know about India, learn about new places to travel and challenge your friends at it? Travia is a unique game by Zostel where you answer location based questions by dropping pins on the map.
 Chances to win the new I-pad mini, free Zostel nights and many more surprises in store. Game on! "-->
-    <title>ZO Rooms | #RoomForYou</title>
+  <title>ZO Rooms | #RoomForYou</title>
+  <!-----files added by aditya----->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/style/billboard.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 <body>
-why so serious?
+<div class="container-fluid">
+    <div class="row">
+    	<div class="col-md-3 col-sm-3 col-xs-3 col-lg-3">
+           <div class="top_left">
+                <div class="logo">
+                   <img src="/static/img/zo.svg" />
+                </div>
+                <div class="name">
+                   <h4><small><strong>Welcome</strong></small></h4>
+                   <h4><strong>{{user.first_name}} {{user.last_name}}</strong></h4>
+                </div>
+
+                    <div class="message">
+                    <h4>Write your message below</h4>
+
+                        <div class="input_text"/>
+                            <blockquote>
+                                     <!-- <textarea class="text_area" rows="4" cols="28" id="myInput" onkeyup="myFunction()" placeholder="You have only one life to live..So go out and enjoy every moment of life..!!" ></textarea> -->
+                                     {% if not board.id %}
+                                     <form role="form">
+                                            <div class="form-group">
+                                                    <textarea class="form-control text_area"  id="myInput"  placeholder="You have only one life to live..So go out and enjoy every moment of life..!!"></textarea>
+                                            </div>
+
+                                     </form>
+                                     {%endif%}
+                                <footer>{{user.first_name}} {{user.last_name}}</footer>
+                            </blockquote>
+
+                    </div>
+
+                <a onclick="myFunction()" data-toggle="modal"   class="btn btn-info preview" role="button"><strong>PREVIEW</strong></a>
+
+
+                </div>
+            </div>
+    	</div>
+    	<div class="col-md-9 col-sm-9 col-xs-9 clo-lg-9">
+      		<div class="top">
+		    	<h3><small>Your message will be displayed on this Billboard</small></h3>
+				<div class="img_contain">
+                    {% if board.image %}
+                        <img src="{{board.image.url}}" class="img-responsive img-rounded"/>
+                    {% else %}
+				        <img class="img-responsive img-rounded" src="/static/img/template.png" />
+                    {% endif %}
+			<p id="views" class="view"></p>
+					<div class="button_div">
+        				<a href="" class="btn btn-info  btn_vote " id= "vote" onclick="return submit(this)">
+          					<span class="glyphicon glyphicon-heart icon_hover "></span> <strong>Vote <span class="number" id="upvotes-{{board.id}}">{{board.upvotes}}</span></strong>
+        				</a>
+
+					</div>
+                     <div class="share_img1">
+                     <h3><small><strong>Share on</strong></small></h3>
+                    	<a href="javascript:PopUp('http://www.facebook.com/sharer.php?u=http://zorooms.com/')"><img class="img1 img-responsive img-rounded" src="/static/img/fb.svg"/></a>
+                    	<a href="javascript:PopUp('https://twitter.com/share?text=Zo%20Rooms%20for%20you%20&url')"><img class="img1 img-responsive img-rounded" src="/static/img/twitter.svg"/></a>
+                    	<a href="javascript:PopUp('https://plus.google.com/share?&url=http://zorooms.com')"><img class="img1 img-responsive img-rounded" src="/static/img/g+.svg" /></a>
+                	</div>
+                    <div class="hash_img">
+                    	<h4># Rooms for you</h4>
+                    </div>
+                    <div class="logo_img">
+                    	<img src="/static/img/zo.svg" />
+                    </div>
+            	</div>
+        	</div>
+       </div>
+    </div>
+    <div class="row">
+       <div class="col-md-3 col-sm-3 col-xs-3 col-lg-3">
+            <div class="logout">
+        	        <a href="/logout/"><p><span class="glyphicon glyphicon-off"></span> Logout </p></a>
+                </div>
+       </div>
+       <div class="col-md-9 col-sm-9 col-xs-9 col-lg-9">
+         <div class="bottom">
+         <div class="more">
+        	<h3><small>Browse messages by people&nbsp;&nbsp;<a href="#" class="btn btn-info btn-sm explore">
+          <span class="glyphicon glyphicon-th"></span> Explore More
+        </a></small></h3>
+            </div>
+        	<div class="img_gallery">
+            	<ul class="row">
+                    {% for board in more_boards %}
+                        {% if board.image  %}
+                            <li class="col-md-4 col-sm-4 col-lg-4 col-xs-4">
+                                <img class="gallery img-responsive  img-rounded" src={{board.image.url}} id={{board.id}} alt={{board.upvotes}}>
+                            </li>
+                        {% endif %}
+                    {% endfor %}
+
+                </ul>
+            </div>
+        </div>
+
+       </div>
+    </div>
+</div>
+
+
+
+    				<!-- Modal -->
+  <div class="modal fade" id="myModal2" role="dialog">
+    <div class="modal-dialog">
+
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Parth Choudhary</h4>
+        </div>
+        <div class="modal-body">
+          <h3>"You have only one life to live. So go out and enjoy every moment of life."</h3>
+        </div>
+        <div class="modal-footer" id="vote_id">
+
+
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+<!--  Modal -->
+
+
+
+
+
+	<!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">PLEASE CHECK YOUR MESSAGE AGAIN</h4>
+        </div>
+        <div class="modal-body">
+          <h3 id="final_message">"You have only one life to live. So go out and enjoy every moment of life."</h3>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">CANCEL</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal" onclick="return submit(this)" id="message">PREVIEW THIS</button>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+<!--  Modal -->
+<script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
+
+ <script type="text/javascript" charset="utf8" src="/static/js/ajaxsetup.js"></script>
+	<script>
+        function myFunction() {
+        var x = document.getElementById("myInput").value;
+        document.getElementById("views").innerHTML =   x;
+        $('#final_message').empty();
+        $('#final_message').append(x);
+        $('#myModal').modal('show');
+        }
+
+        function submit(element){
+            if (element.id =='vote')
+            {
+                {% if board.id%}
+                    var bid = {{board.id}};
+                {%endif%}
+                var upvote = 'True';
+                var data = {'upvote':upvote, 'bid':bid};
+            }
+            else{
+                var message = $('#myInput').val();
+                var data = {'message':message};
+            }
+
+            $.ajax({
+              type: "POST",
+              url: '/board/',
+              data: data,
+              success: function(result){
+                result = JSON.parse(result);
+                if ((result['status']=='success') && (result['upvote']=='+1')){
+
+                    upvote = document.getElementById("upvotes-" + result.board_id).innerHTML;
+                    upvote = parseInt(upvote);
+                    upvote = upvote + 1;
+                    $('#upvotes-'+result.board_id).empty();
+                    $('#upvotes-'+result.board_id).append(upvote);
+                }
+                if ((result['status']=='success') && (result['upvote']=='-1')){
+                    upvote = document.getElementById("upvotes-" + result.board_id).innerHTML;
+                    upvote = parseInt(upvote);
+                    upvote = upvote - 1;
+                    $('#upvotes-'+result.board_id).empty();
+                    $('#upvotes-'+result.board_id).append(upvote);
+                }
+                if ((result['status']=='success') && (result['message'])){
+                    location.reload();
+                }
+              },
+            });
+            return false;
+        }
+    function submit_vote(element){
+            var upvote = 'True';
+            var bid = element.id;
+            console.log(bid);
+            var data = {'upvote':upvote, 'bid':bid};
+            console.log(data);
+            $.ajax({
+              type: "POST",
+              url: '/board/',
+              data: data,
+              success: function(result){
+                result = JSON.parse(result);
+                if ((result['status']=='success') && (result['upvote']=='+1')){
+                    upvote = document.getElementById("upvotes-" + result.board_id).innerHTML;
+                    upvote = parseInt(upvote);
+                    upvote = upvote + 1;
+                    $('#upvotes-'+result.board_id).empty();
+                    $('#upvotes-'+result.board_id).append(upvote);
+                }
+                if ((result['status']=='success') && (result['upvote']=='-1')){
+                    upvote = document.getElementById("upvotes-" + result.board_id).innerHTML;
+                    upvote = parseInt(upvote);
+                    upvote = upvote - 1;
+                    $('#upvotes-'+result.board_id).empty();
+                    $('#upvotes-'+result.board_id).append(upvote);
+                }
+              },
+            });
+            return false;
+        }
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '820257721402863',
+          xfbml      : true,
+          version    : 'v2.4'
+        });
+      };
+
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "//connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+    </script>
+    <script language="JavaScript">
+    <!--
+        function PopUp(URL) {
+        window.open(URL, 'Windowname', 'width=550, height=400, toolbar=0, scrollbars=1 ,location=0 ,statusbar=0,menubar=0, resizable=0');
+        }
+        //-->
+    </script>
+<script>
+$(document).ready(function(){
+           $('li img').on('click',function(){
+                var src = $(this).attr('src');
+                var img = '<img src="' + src + '" class="img-responsive"/>';
+                var id = $(this).attr('id');
+                var upvotes = $(this).attr('alt');
+				var index = $(this).parent('li').index();
+				var vote = '<button type="button" class="btn btn-default" data-dismiss="modal">CANCEL</button>';
+                vote += '<a href="#" class="btn btn-info btn_vote1"  onclick="return submit_vote(this)" id=' + id +'>';
+                vote += '<span class="glyphicon glyphicon-heart icon_hover "></span> <strong>Vote <span class="number" id="upvotes-'+id+'">';
+                vote += upvotes + '</span></strong></a>';
+
+                console.log('after');
+                $('#myModal2').modal('show');
+                $('#myModal2').on('shown.bs.modal', function(){
+                    $('#myModal2 .modal-body').html(img);
+                    $('#myModal2 .modal-footer').html(vote);
+                });
+                $('#myModal2').on('hidden.bs.modal', function(){
+                    $('#myModal2 .modal-body').html('');
+                    $('#myModal2 .modal-footer').html('');
+                });
+           });
+
+        })
+</script>
 </body>
 </html>
