--- a/templates/website/billboard.html
+++ b/templates/website/billboard.html
@@ -44,8 +44,8 @@ Chances to win the new I-pad mini, free Zostel nights and many more surprises in
                                      <!-- <textarea class="text_area" rows="4" cols="28" id="myInput" onkeyup="myFunction()" placeholder="You have only one life to live..So go out and enjoy every moment of life..!!" ></textarea> -->
                                      {% if not board.id %}
                                      <form role="form">
-                                            <div class="form-group">
-                                                    <textarea class="form-control text_area"  id="myInput"  placeholder="You have only one life to live..So go out and enjoy every moment of life..!!"></textarea>
+                                            <div  class="form-group">
+                                                    <textarea class="form-control text_area"  id="myInput"  placeholder="You have only one life to live..So go out and enjoy every moment of life..!!" maxlength="80" onkeyup="myText();"></textarea>
                                             </div>
 
                                      </form>
@@ -55,7 +55,7 @@ Chances to win the new I-pad mini, free Zostel nights and many more surprises in
 
                     </div>
 
-                <a onclick="myFunction()" data-toggle="modal"   class="btn btn-info preview" role="button"><strong>PREVIEW</strong></a>
+                <a onclick="myFunction()" data-toggle="modal"   class="btn btn-info preview" role="button" id="preview"><strong>PREVIEW</strong></a>
 
 
                 </div>
@@ -67,20 +67,27 @@ Chances to win the new I-pad mini, free Zostel nights and many more surprises in
 				<div class="img_contain">
                     {% if board.image %}
                         <img src="{{board.image.url}}" class="img-responsive img-rounded"/>
+                        <div class="button_div">
+                            <label  class="btn btn-default  btn_vote " id= "vote" onclick="return submit(this)">
+                                <span id="love" onClick="loving('love')" class="glyphicon glyphicon-heart icon_hover "></span> <strong>Vote <span class="number" id="upvotes-{{board.id}}">{{board.upvotes}}</span></strong>
+                            </label>
+                            <script>
+                                function loving(obj) {
+                                var el = document.getElementById(obj);
+                                el.style.color = '#F37254';
+                                }
+                            </script>
+
+                        </div>
                     {% else %}
 				        <img class="img-responsive img-rounded" src="/static/img/template.png" />
+
                     {% endif %}
 			<p id="views" class="view"></p>
-					<div class="button_div">
-        				<a href="" class="btn btn-info  btn_vote " id= "vote" onclick="return submit(this)">
-          					<span class="glyphicon glyphicon-heart icon_hover "></span> <strong>Vote <span class="number" id="upvotes-{{board.id}}">{{board.upvotes}}</span></strong>
-        				</a>
-
-					</div>
                      <div class="share_img1">
                      <h3><small><strong>Share on</strong></small></h3>
                     	<a href="javascript:PopUp('http://www.facebook.com/sharer.php?u=http://zorooms.com/')"><img class="img1 img-responsive img-rounded" src="/static/img/fb.svg"/></a>
-                    	<a href="javascript:PopUp('https://twitter.com/share?text=Zo%20Rooms%20for%20you%20&url')"><img class="img1 img-responsive img-rounded" src="/static/img/twitter.svg"/></a>
+                    	<a href="javascript:PopUp('https://twitter.com/intent/tweet?button_hashtag=Room For You&url')"><img class="img1 img-responsive img-rounded" src="/static/img/twitter.svg"/></a>
                     	<a href="javascript:PopUp('https://plus.google.com/share?&url=http://zorooms.com')"><img class="img1 img-responsive img-rounded" src="/static/img/g+.svg" /></a>
                 	</div>
                     <div class="hash_img">
@@ -102,7 +109,7 @@ Chances to win the new I-pad mini, free Zostel nights and many more surprises in
        <div class="col-md-9 col-sm-9 col-xs-9 col-lg-9">
          <div class="bottom">
          <div class="more">
-        	<h3><small>Browse messages by people&nbsp;&nbsp;<a href="#" class="btn btn-info btn-sm explore">
+        	<h3><small>Browse messages by people&nbsp;&nbsp;<a href="/explore/" class="btn btn-info btn-sm explore">
           <span class="glyphicon glyphicon-th"></span> Explore More
         </a></small></h3>
             </div>
@@ -115,7 +122,6 @@ Chances to win the new I-pad mini, free Zostel nights and many more surprises in
                             </li>
                         {% endif %}
                     {% endfor %}
-
                 </ul>
             </div>
         </div>
@@ -181,7 +187,13 @@ Chances to win the new I-pad mini, free Zostel nights and many more surprises in
 <script src="/static/js/bootstrap.min.js"></script>
 
  <script type="text/javascript" charset="utf8" src="/static/js/ajaxsetup.js"></script>
-	<script>
+
+    <script>
+        function myText() {
+        var el = document.getElementById('preview');
+        el.style.background = '#F37254';
+        }
+
         function myFunction() {
         var x = document.getElementById("myInput").value;
         document.getElementById("views").innerHTML =   x;
