--- a/templates/website/home.html
+++ b/templates/website/home.html
@@ -15,23 +15,47 @@ Chances to win the new I-pad mini, free Zostel nights and many more surprises in
       <!--meta name="description" content="Want to prove how much you really know about India, learn about new places to travel and challenge your friends at it? Travia is a unique game by Zostel where you answer location based questions by dropping pins on the map.
 Chances to win the new I-pad mini, free Zostel nights and many more surprises in store. Game on! "-->
     <title>ZO Rooms | #RoomForYou</title>
+    <!-----files added by aditya----->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link href="/static/style/normalize.css" rel="stylesheet" />
+    <link href="/static/style/style.css" rel="stylesheet" />
 </head>
 <body>
 {% load socialaccount %}
 {% providers_media_js %}
-<a href="{% provider_login_url "facebook" %}">Facebook</a>
-<a href="{% provider_login_url "twitter" %}">Twitter</a>
+    <div class="container">
+
+		<div class="logo">
+			<img src="/static/img/zo.svg" />
+		</div>
+        <div class="text">
+        	<h1>Life rearly gives a chance to get heard by the world</h1>
+            <h2>We want to spread this opportunity to everyone. Afterall we believe in more rooms @ ZO Rooms.</h2>
+        </div>
+        <div class="social">
+        	<div class="facebook">
+        		<p>Login via facebook to</p>
+            	<a class="btn" href="{% provider_login_url 'facebook' %}"><i class="fa fa-facebook-square fa-lg"></i>&nbsp;&nbsp;POST YOUR MESSAGE</a>
+            </div>
+            <div class="or">
+            <h2>OR</h2>
+            </div>
+            <div class="twitter">
+            	<p>Leave a tweet with</p>
+            	<a class="btn1" href="javascript:PopUp('https://twitter.com/intent/tweet?button_hashtag=Room For You')"><i class="fa fa-twitter fa-lg"></i>&nbsp;&nbsp;  #ROOMS FOR YOU</a>
+            </div>
+        </div>
+    </div>
 
 </body>
 <script>
   window.fbAsyncInit = function() {
     FB.init({
-      appId      : '491408177702275',
+      appId      : '821095554652413',
       xfbml      : true,
       version    : 'v2.4'
     });
-
-    // ADD ADDITIONAL FACEBOOK CODE HERE
   };
 
   (function(d, s, id){
@@ -42,5 +66,11 @@ Chances to win the new I-pad mini, free Zostel nights and many more surprises in
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
-
+<script language="JavaScript">
+    <!--
+        function PopUp(URL) {
+        window.open(URL, 'Windowname', 'width=550, height=400, toolbar=0, scrollbars=1 ,location=0 ,statusbar=0,menubar=0, resizable=0');
+        }
+        //-->
+</script>
 </html>
