--- a/templates/website/explore.html
+++ b/templates/website/explore.html
@@ -22,12 +22,12 @@
         </header>
 			<div id="grid-gallery" class="grid-gallery">
 				<section class="grid-wrap">
-					<ul class="grid">
+					<ul class="grid" id="small">
 						<li class="grid-sizer"></li><!-- for Masonry column width -->
                         {% for board in boards %}
 						<li>
 							<figure>
-								<img src={{board.image.url}} alt="img01"/>
+								<img src={{board.img}} alt="img01"/>
 								<!-- <figcaption><h3>Letterpress asymmetrical</h3><p>Chillwave hoodie ea gentrify aute sriracha consequat.</p></figcaption> -->
 							</figure>
 						</li>
@@ -35,14 +35,29 @@
 					</ul>
 				</section><!-- // grid-wrap -->
 				<section class="slideshow">
-					<ul>
+					<ul id="large">
                         {% for board in boards %}
 						<li>
 							<figure>
-								<img src={{board.image.url}} alt="img02"/>
-                                <center><button class="btn btn-danger btn-lg  btn_vote " id= {{board.id}} onclick="return submit_vote(this)" style="background-color:">
-          					<span class="glyphicon glyphicon-heart icon_hover "></span> <strong>Vote <span class="number" id="upvotes-{{board.id}}">{{board.upvotes}}</span></strong>
-        				</button></center>
+								<img src={{board.img}} alt="img02"/>
+								{% if board.upvoted %}
+                                <center><label  class="btn btn-default  btn_vote ">
+                                    <span  class="glyphicon glyphicon-heart icon_hover " style="color:#F37254;"></span> <strong>Vote <span class="number" style="color:#F37254;">{{board.upvotes}}</span></strong>
+                                </label></center>
+								{% else %}
+									<center>
+										<label  class="btn btn-default  btn_vote " id= "{{board.id}}" onclick="return submit_vote(this)">
+											<span id="love1" onClick="loving('love1')" class="glyphicon glyphicon-heart icon_hover " ></span> <strong>Vote <span class="number" id="upvotes-{{board.id}}" style="color:#F37254;">{{board.upvotes}}</span></strong>
+										</label>
+									</center>
+									<script>
+										function loving(obj) {
+										var el = document.getElementById(obj);
+										el.style.color = '#F37254';
+										}
+									</script>
+
+								{% endif %}
 							</figure>
 						</li>
                         {% endfor %}
@@ -95,6 +110,10 @@ function submit_vote(element){
             });
             return false;
         }
+
+</script>
+
+<script>
 
 </script>
 
